<resources>
    <string name="app_name">final year app</string>
    <string name="report_chapter_input">Enter chapter name</string>
    <string name="add_chapter_button">Add</string>
    <string name="userInputModule">Enter module name</string>
    <string name="addModuleButton">Add</string>
    <string name="continueButton">Continue</string>
    <string name="aboutButton">About</string>
    <string name="createTrackerButton">create tracker</string>
    <string name="trackerButton">Tracker</string>
    <string name="userInfoButton">User info</string>
    <string name="deleteMe">im a test dummy</string>
</resources>